자료구조 26강 정리

--- a/data-structure/25.md
+++ b/data-structure/25.md
@@ -46,7 +46,7 @@
 
 ```java
 public class Node {
-	int date;       // 데이터
+	int data;       // 데이터
 	Node left;      // 왼쪽 자식 노드
 	Node right;     // 오른쪽 자식 노드
 }
