자료구조 28강 수정

--- a/data-structure/28.md
+++ b/data-structure/28.md
@@ -15,8 +15,8 @@
 - 자료 제거
 
 Node
-- key
-- value
+- key : 키 (검색시 활용)
+- value : 데이터
 - left Node
 - right Node
 
@@ -90,5 +90,5 @@ Node
 3. succesor.left = delNode.left
 4. sucessor.right = delNode.right
 5. parentNode가 null이 아니라면, 
-   (1) delNode가 parentNode.left 라면, parentNode.left = succesor
-   (2) delNode가 parentNode.right 라면, parentNode.right = succesor
+   - (1) delNode가 parentNode.left 라면, parentNode.left = succesor
+   - (2) delNode가 parentNode.right 라면, parentNode.right = succesor
