자료구조 34강 정리

--- a/data-structure/33_34.md
+++ b/data-structure/33_34.md
@@ -12,7 +12,7 @@
 - 간선의 가중치의 합이 최소인 신장 트리
 - Kruskal 알고리즘 또는 Prim 알고리즘을 사용하여 최소 비용 신장 트리를 구할 수 있다.
 
-#### Kruskal 알고리즘
+#### 1. Kruskal 알고리즘
 1. 초기화 단계
     - 노드는 그래프 G의 노드를 모두 포함한 상태에서, 간선은 공백
     - 그래프G의 모든 간선을 가중치에 따라서 오름차순으로 정렬한다.
@@ -24,3 +24,11 @@
 - 그래프에 경로가 존재한다면, 순환이 발생한다.
 - 즉, to → from 으로 그래프를 순회할 때, 다시 to를 발견한다면 순환이 발생한다.
 - 그래프의 순회(DFS or BFS)를 사용
+
+#### 2. Prim 알고리즘
+1. 초기화
+    - 임의로 시작노드를 정한다.
+    - 간선의 집합에는 아무것도 없다.
+2. 루프
+    - 현재 신장트리의 노드들과 연결된 모든 간선들 중에서 (1) 가장 간선의 가중치가 적으면서 (2) 순환이 발생하지 않는 간선을 추가한다.
+    - 그리고 연결된 노드(트리)를 추가한다.
