자료구조 36강 정리

--- a/data-structure/35_36.md
+++ b/data-structure/35_36.md
@@ -8,7 +8,7 @@
   - 모든 시작노드에 대해서 나머지 모든 도착노드들에 대한 최단경로
   - 도달 가능 여부 확인
 
-#### Dijkstra (다익스트라) 알고리즘
+#### 1. Dijkstra (다익스트라) 알고리즘
 - 기본개념
   - 노드 v, 노드 w
   - y<sub>v</sub> : 시작노드에서 노드 v까지의 최단거리
@@ -38,3 +38,23 @@
 2. 최단 거리를 저장하고 있는 1차원 배열에서 가장 작은 거리를 저장하고 있는 인덱스 추출 (최소 힙 구조 이용)
 3. 추출한 인덱스(노드)의 방문 표시를 하고, 인덱스와 인접한 노드의 가중치를 계산하여 필요시 거리를 갱신한다.
 4. 2~3번 반복 (힙이 비어있을 때까지, 1차원 배열의 크기-1 횟수 반복)
+
+#### 2. Floyd 알고리즘
+- 시작노드가 모든 노드이고, 도착노드는 시작노드를 제외한 그래프 상의 모든 노드인 경우
+- 의사코드
+  - 노드 v, w
+  - 노드 v까지의 최단 경로를 알고 있다.
+  - 노드 w와 노드 v + C<sub>v, w</sub>의 값을 비교하여 최단 경로를 갱신한다.
+
+#### 구현
+- 중간노드를 거쳐서 시작노드에서 도착노드의 최단 거리를 비교하면서 갱신한다.
+- 거쳐가는 노드가 중심이며, 3중 for문이기 때문에 시간 복잡도는 O(n<sup>3</sup>) 이다.
+  ```
+  for 중간노드
+    for 시작노드
+      for 도착노드
+  ```
+
+#### 3. 도달 가능성 구하기
+- 시작노드부터 도착노드까지 경로가 있는지 검사하기
+- 기본적으로 Floyd 알고리즘과 유사하며, 경로가 있는지 여부만 확인하면 되기 때문에 2차원 배열은 boolean 타입으로 지정하면 된다.
